infra-vpn-generate/releases/vault/vault.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
